--- a/src/components/AddActivity/AddActivity.css
+++ b/src/components/AddActivity/AddActivity.css
@@ -1,25 +1,27 @@
 .container {
-	width: 100%;
-	margin-top: 100px;
+	max-width: 1170px;
+    margin: auto;
 }
 
-.container h2{
-	padding: 2rem 3rem;
+.container .h2{
+	padding-top: 8rem;
+	margin: 0 auto;
+	font-size: 32px
 }
 .banner{
 	display: flex;
 	justify-content: space-between;
-	margin: 0 3rem 3rem;	
+		
 }
 
 .banner .banner-area{
-	margin: 3rem;
+	margin-bottom: 1rem;
 	min-width:80px;
 
 }
 .banner .banner-area img{
 	
-	width: 100%;
+	width: 50%;
 	display: block;
 }
 
