--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,9 +14,11 @@ nav .logo {
 	width: 40%;
 	height: 100%;
 	display: flex;
+	justify-content:space-around;
 	align-items: center;
-	font-size: 24px;
+	font-size: 30px;
 	color: #f6f8f6;
+	;
 	
 }
 
@@ -24,7 +26,7 @@ nav .logo:hover{
 	filter: drop-shadow(0px 0px 20px chartreuse)
 }
 nav .logo strong{
-    
+    font-size: 35px;
     color: #0c0c0c;
     text-shadow: 0 0 10px #adff2f;
 }
@@ -40,7 +42,7 @@ nav .links{
     width: 60%;
     height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
 }
 nav .links li:hover{
