--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,28 @@ body {
   padding: 0;
 	margin: 0;
   color: white;
-  background-color: rgb(59, 52, 52);
+  background-color: rgb(44, 40, 40);
 	box-sizing: border-box;
   font-family: 'Oswald', sans-serif;
-  
+  background: linear-gradient(-45deg, #666766, #2b3429, rgb(54, 101, 65), #000000);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+
+body::-webkit-scrollbar{
+	display: none;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 
