--- a/src/components/FormActivity/FormActivity.css
+++ b/src/components/FormActivity/FormActivity.css
@@ -74,3 +74,30 @@
 .activity-img{
 	margin-left: 5rem ;
 }
+
+.describe textarea{
+	background: #2e2e2e;
+	color: #fff;
+	padding: 10px;
+	width: 250px;
+	height: auto;
+	border: none;
+	border-radius: 3px;
+	font-size: 20px;
+	margin-bottom: 1rem;
+	filter: drop-shadow(0px 0px 2px rgb(67, 233, 67))
+	
+}
+
+ textarea::-webkit-scrollbar {
+	width: 12px;       
+  }
+  textarea::-webkit-scrollbar-track {
+	background: #2d3039;
+	border-radius: 3px;
+  }
+  textarea::-webkit-scrollbar-thumb {
+	background-color: rgb(46, 45, 45) ;
+	border-radius: 6px;
+	border: 3px solid rgb(67, 233, 67);
+  }
